# wallet-tracker

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
libraries/common/: Cargo.toml
libraries/common/src/: lib.rs
libraries/db/: Cargo.toml
libraries/db/src/: balances.rs  lib.rs  transactions.rs  wallets.rs
libraries/rpc/: Cargo.toml
libraries/rpc/src/: client.rs  error.rs  lib.rs  parser.rs
migrations/: 20260620092105_create_wallets.sql  20260620092106_create_telegram_users.sql  20260620092107_create_wallet_subscriptions.sql  20260620092108_create_token_balances.sql  20260620092109_create_transactions.sql  20260620092110_create_token_transfers.sql
