[workspace]
members = [
    "bin/indexer",
    "bin/bot",
    "libraries/db"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros"] }
solana-client = "2"
solana-sdk = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }