[workspace]
members = [
    "bin/indexer",
    "bin/bot",
    "libraries/common",
    "libraries/db",
    "libraries/rpc"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros", "rust_decimal"] }
solana-client = "2"
solana-sdk = "2"
spl-token = "4"
solana-transaction-status = "2"
solana-account-decoder = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
eyre = "0.6"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }